# AI-App-Test

./: Pasted-import-os-import-logging-import-base64-import-json-from-fastapi-import-FastAPI-Request-File-Uploa-1742952377105.txt  Pasted-import-uuid-import-logging-from-typing-import-Dict-List-Any-Optional-Configure-logging-logger--1742952890300.txt  base.html  custom.css  data_store.py  flask_app.py  gunicorn_conf.py  index.html  main.py  openai_utils.py  pdf_utils.py  pyproject.toml  requirements.txt  script.js  style.css
static/: style.css
templates/: flashcards.html  index.html  sets.html
templates/templates/: sets.html
templates/templates/templates/: flashcards.html
